# Air-Battle

./: .gitignore  Bullet.cpp  Bullet.h  CMakeLists.txt  MyRect.cpp  MyRect.h  README.md  conf_doc  main.cpp  test.txt
doc/html/: AbstractEnemyDecorator_8h_source.html  AbstractLevelFactory_8h_source.html  AbstractObserver_8h_source.html  AbstractSubject_8h_source.html  AbstractVisitor_8h_source.html  AppSettings_8h_source.html  Bazooka_8h_source.html  Bonus_8h_source.html  Detonation_8h_source.html  Enemy_8h_source.html  EquipmentObserver_8h_source.html  Equipment_8h_source.html  FactoryManager_8h_source.html  GameObjectStorage_8h_source.html  GameObject_8h_source.html  GameWindow_8h_source.html  Game_8h_source.html  Gunshell_8h_source.html  HandBazooka_8h_source.html  HandBonus_8h_source.html  HandDetonation_8h_source.html  HandGun_8h_source.html  HandMachinegun_8h_source.html  HandWeapon_8h_source.html  HealthObserver_8h_source.html  Health_8h_source.html  LabelObserver_8h_source.html  Level1Factory_8h_source.html  Level2Factory_8h_source.html  Level3Factory_8h_source.html  Level4Factory_8h_source.html  Level5Factory_8h_source.html  Level_8h_source.html  Machinegun_8h_source.html  MovableObject_8h_source.html  MoveByCurve_8h_source.html  MoveByLine_8h_source.html  MoveStrategy_8h_source.html  MoveVisitor_8h_source.html  PlayerObject_8h_source.html  (+121 more)
doc/images/: Architecture.xml
doc/latex/: annotated.tex  classAbstractEnemyDecorator.eps  classAbstractEnemyDecorator.tex  classAbstractLevelFactory.eps  classAbstractLevelFactory.tex  classAbstractObserver.eps  classAbstractObserver.tex  classAbstractSubject.eps  classAbstractSubject.tex  classAbstractVisitor.eps  classAbstractVisitor.tex  classAppSettings.tex  classBazooka.eps  classBazooka.tex  classBonus.eps  classBonus.tex  classDetonation.eps  classDetonation.tex  classEnemy.eps  classEnemy.tex  classEquipment.eps  classEquipment.tex  classEquipmentObserver.eps  classEquipmentObserver.tex  classFactoryManager.tex  classGame.tex  classGameObject.eps  classGameObject.tex  classGameObjectStorage.tex  classGameWindow.tex  classGunshell.eps  classGunshell.tex  classHandBazooka.eps  classHandBazooka.tex  classHandBonus.eps  classHandBonus.tex  classHandDetonation.eps  classHandDetonation.tex  classHandGun.eps  classHandGun.tex  (+48 more)
include/: Bullet.h  Enemy.h  Game.h  GameObject.h  GunShell.h  Health.h  Level.h  MovableObject.h  MyRect.h  Player.h  PlayerObject.h  Rocket.h  Score.h  SpawnObject.h  TypeInfoWrapper.h
include/enemies/: Enemy.h
resources/: res.qrc  settings.json
src/: AppSettings.cpp  AppSettings.h  Bullet.cpp  CMakeLists.txt  Director.cpp  Director.h  Enemy.cpp  FactoryManager.cpp  FactoryManager.h  Game.cpp  Game.h  GameObject.cpp  GameObjectKeeper.cpp  GameObjectKeeper.h  GameObjectStorage.cpp  GameObjectStorage.h  GameWindow.cpp  GameWindow.h  GameWindow.ui  GunShell.cpp  Health.cpp  Level.cpp  Magazine.cpp  Magazine.h  MovableObject.cpp  MyRect.cpp  Player.cpp  PlayerObject.cpp  Rocket.cpp  Score.cpp  SpawnObject.cpp  additionals.cpp  additionals.h
src/GameObjectBuilders/: GameObjectBuilder.cpp  PresetPositionBuilder.cpp  PresetPositionBuilder.h
src/GameObjects/: GameObject.cpp  GameObject.h  HeartObject.cpp  HeartObject.h  MovableObject.cpp  MovableObject.h  PlayerObject.cpp  PlayerObject.h  SpawnObject.cpp  SpawnObject.h
src/GameObjects/Bonuses/: Bonus.cpp  Bonus.h  Detonation.cpp  Detonation.h
src/GameObjects/Enemies/: Enemy.cpp  Enemy.h  Enemy1.cpp  Enemy1.h  Enemy2.cpp  Enemy2.h
src/GameObjects/Enemies/EnemyDecorators/: AbstractEnemyDecorator.cpp  AbstractEnemyDecorator.h  ShieldDecorator.cpp  ShieldDecorator.h
src/GameObjects/Gunshells/: Bullet.cpp  Gunshell.cpp  Gunshell.h  Rocket.h
src/GameObjects/Weapons/: Bazooka.cpp  Bazooka.h  Machinegun.cpp  Machinegun.h  Weapon.cpp  Weapon.h
src/HandBonuses/: HandBonus.cpp  HandBonus.h  HandDetonation.cpp  HandDetonation.h
src/HandWeapons/: HandBazooka.cpp  HandBazooka.h  HandGun.cpp  HandGun.h  HandMachinegun.cpp  HandMachinegun.h  HandWeapon.cpp  HandWeapon.h
src/LevelFactories/: AbstractLevelFactory.cpp  AbstractLevelFactory.h  Level1Factory.cpp  Level1Factory.h  Level2Factory.cpp  Level2Factory.h  Level3Factory.cpp  Level3Factory.h  Level4Factory.cpp  Level4Factory.h  Level5Factory.cpp  Level5Factory.h
src/MoveStrategies/: MoveByCurve.cpp  MoveByCurve.h  MoveByLine.cpp  MoveByLine.h  MoveByRandom.cpp  MoveStrategy.cpp  MoveStrategy.h
src/SpecialObjects/Observers/: AbstractObserver.h  EquipmentObserver.cpp  EquipmentObserver.h  HealthObserver.cpp  HealthObserver.h  LabelObserver.cpp  LabelObserver.h  LevelObserver.cpp  LevelObserver.h  MagazineObserver.cpp  MagazineObserver.h  ScoreObserver.cpp  ScoreObserver.h
src/SpecialObjects/Subjects/: AbstractSubject.cpp  AbstractSubject.h  Equipment.cpp  Equipment.h  Health.cpp  Health.h  Level.cpp  Level.h  Magazine.cpp  Magazine.h  Score.cpp  Score.h
src/Visitors/: AbstractVisitor.h  MoveVisitor.cpp  MoveVisitor.h
src/enemies/: Enemy.cpp
src/gameobjectbuilders/: GameObjectBuilder.cpp  PresetPositionBuilder.cpp
src/gameobjects/: GameObject.cpp  HeartObject.cpp  MovableObject.cpp  PlayerObject.cpp  SpawnObject.cpp
src/gameobjects/enemies/: Enemy.cpp  Enemy1.cpp  Enemy2.cpp
src/gameobjects/enemies/enemydecorators/: AbstractEnemyDecorator.cpp  ShieldDecorator.cpp
src/gameobjects/gunshells/: Bullet.cpp  GunShell.cpp  Gunshell.cpp  Rocket.cpp
src/gameobjects/movestrategies/: MoveByCurve.cpp  MoveByLine.cpp  MoveByRandom.cpp  MoveStrategy.cpp
src/gameobjects/specialobjects/observers/: HealthObserver.cpp  LevelObserver.cpp  ScoreObserver.cpp
src/gameobjects/specialobjects/subjects/: AbstractSubject.cpp  Health.cpp  Level.cpp  Score.cpp
src/gameobjects/weapons/: Bazooka.cpp  Machinegun.cpp  Weapon.cpp
src/gunshells/: Bullet.cpp  GunShell.cpp  Rocket.cpp
src/handweapons/: HandBazooka.cpp  HandGun.cpp  HandMachinegun.cpp  HandWeapon.cpp
src/levelfactories/: AbstractLevelFactory.cpp  Level1Factory.cpp  Level2Factory.cpp  Level3Factory.cpp
src/weapons/: Weapon.cpp
(+62 files in other folders)
